backend/internal/policy/testdata/kyverno/policyreport_failing.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  creationTimestamp: "2026-04-10T01:46:12Z"
  generation: 11
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: 07d4302f-b529-44d0-97c7-1931050950f4
  namespace: kube-system
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: cilium-envoy-dh92s
    uid: 07d4302f-b529-44d0-97c7-1931050950f4
  resourceVersion: "6718265"
  uid: 8f492a98-598c-4321-b5f4-5951a4b13d7c
results:
- category: Pod Security Standards (Baseline)
  message: Any capabilities added beyond the allowed list (AUDIT_WRITE, CHOWN, DAC_OVERRIDE,
    FOWNER, FSETID, KILL, MKNOD, NET_BIND_SERVICE, SETFCAP, SETGID, SETPCAP, SETUID,
    SYS_CHROOT) are disallowed.
  policy: disallow-capabilities
  properties:
    process: background scan
  result: fail
  rule: adding-capabilities
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: 'validation error: Sharing the host namespaces is disallowed. The fields
    spec.hostNetwork, spec.hostIPC, and spec.hostPID must be unset or set to `false`.
    rule host-namespaces failed at path /spec/hostNetwork/'
  policy: disallow-host-namespaces
  properties:
    process: background scan
  result: fail
  rule: host-namespaces
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: 'validation error: HostPath volumes are forbidden. The field spec.volumes[*].hostPath
    must be unset. rule host-path failed at path /spec/volumes/0/hostPath/'
  policy: disallow-host-path
  properties:
    process: background scan
  result: fail
  rule: host-path
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: 'validation error: Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
    , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
    must either be unset or set to `0`. rule host-ports-none failed at path /spec/containers/0/ports/0/hostPort/'
  policy: disallow-host-ports
  properties:
    process: background scan
  result: fail
  rule: host-ports-none
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'host-process-containers' passed.
  policy: disallow-host-process
  properties:
    process: background scan
  result: pass
  rule: host-process-containers
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'privileged-containers' passed.
  policy: disallow-privileged-containers
  properties:
    process: background scan
  result: pass
  rule: privileged-containers
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'check-proc-mount' passed.
  policy: disallow-proc-mount
  properties:
    process: background scan
  result: pass
  rule: check-proc-mount
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: 'validation error: Setting the SELinux type is restricted. The fields spec.securityContext.seLinuxOptions.type,
    spec.containers[*].securityContext.seLinuxOptions.type, , spec.initContainers[*].securityContext.seLinuxOptions,
    and spec.ephemeralContainers[*].securityContext.seLinuxOptions.type must either
    be unset or set to one of the allowed values (container_t, container_init_t, or
    container_kvm_t). rule selinux-type failed at path /spec/containers/0/securityContext/seLinuxOptions/type/'
  policy: disallow-selinux
  properties:
    process: background scan
  result: fail
  rule: selinux-type
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'selinux-user-role' passed.
  policy: disallow-selinux
  properties:
    process: background scan
  result: pass
  rule: selinux-user-role
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'app-armor' passed.
  policy: restrict-apparmor-profiles
  properties:
    process: background scan
  result: pass
  rule: app-armor
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'check-seccomp' passed.
  policy: restrict-seccomp
  properties:
    process: background scan
  result: pass
  rule: check-seccomp
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
- category: Pod Security Standards (Baseline)
  message: validation rule 'check-sysctls' passed.
  policy: restrict-sysctls
  properties:
    process: background scan
  result: pass
  rule: check-sysctls
  scored: true
  severity: medium
  source: kyverno
  timestamp:
    nanos: 0
    seconds: 1775817991
scope:
  apiVersion: v1
  kind: Pod
  name: cilium-envoy-dh92s
  namespace: kube-system
  uid: 07d4302f-b529-44d0-97c7-1931050950f4
summary:
  error: 0
  fail: 5
  pass: 7
  skip: 0
  warn: 0
